[package]
name = "event-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossbeam = { version = "0.8.4", default-features = false, features = ["crossbeam-queue", "alloc"] }
device_query = "4.0.1"
reqwest = "0.12.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", default-features = false, features = ["macros"] }
ctrlc = "3.4.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true